# OpenGL-Engine-in-C

./: README.md  geometry.c  gl_basics.c  glad.c  main.c  meson.build  shaders.c
include/: geometry.h  gl_basics.h  shaders.h
include/glad/: glad.h
resources/: shader.frag  shader.vert
